--- a/LeBaluchon/View/Base.lproj/Main.storyboard
+++ b/LeBaluchon/View/Base.lproj/Main.storyboard
@@ -25,15 +25,52 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My home" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xc-Gp-H3w">
-                                <rect key="frame" x="152.66666666666666" y="124" width="108.99999999999997" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Ma location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xc-Gp-H3w">
+                                <rect key="frame" x="140" y="123.99999999999999" width="134.33333333333337" height="32.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e8Y-FO-5tl">
-                                <rect key="frame" x="124" y="201" width="166" height="82"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qhG-dq-ind">
+                                <rect key="frame" x="104.33333333333333" y="164" width="205.33333333333337" height="210.66666666666663"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PQw-Xs-JD2">
+                                        <rect key="frame" x="0.0" y="0.0" width="205.33333333333334" height="60.666666666666664"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DefaultNameCity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SMN-in-rL5">
+                                        <rect key="frame" x="0.0" y="70.666666666666657" width="205.33333333333334" height="28.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conditions Météorologique" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWO-Xq-1dd">
+                                        <rect key="frame" x="0.0" y="109.33333333333333" width="205.33333333333334" height="40.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CielDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swd-ix-Ez3">
+                                        <rect key="frame" x="0.0" y="160" width="205.33333333333334" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TempsDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTm-Di-Gns">
+                                        <rect key="frame" x="0.0" y="190.33333333333331" width="205.33333333333334" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="SMN-in-rL5" firstAttribute="top" secondItem="PQw-Xs-JD2" secondAttribute="bottom" constant="9.9999999999999929" id="h0Q-JZ-cs1"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e8Y-FO-5tl">
+                                <rect key="frame" x="175" y="731" width="64" height="82"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="82" id="iqt-7u-r1J"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="TEST"/>
                                 <connections>
@@ -46,14 +83,27 @@
                         <color key="tintColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstItem="1xc-Gp-H3w" firstAttribute="centerX" secondItem="LgW-0o-trY" secondAttribute="centerX" id="7Rc-C7-tNH"/>
+                            <constraint firstItem="qhG-dq-ind" firstAttribute="top" secondItem="1xc-Gp-H3w" secondAttribute="bottom" constant="7.6666666666667425" id="9bN-7c-UBN"/>
+                            <constraint firstItem="e8Y-FO-5tl" firstAttribute="bottom" secondItem="3Ex-4W-8Bm" secondAttribute="bottom" id="Rlf-Jz-7W8"/>
+                            <constraint firstItem="e8Y-FO-5tl" firstAttribute="leading" secondItem="3Ex-4W-8Bm" secondAttribute="leading" constant="175" id="iZJ-sw-Zvi"/>
+                            <constraint firstAttribute="bottom" secondItem="qhG-dq-ind" secondAttribute="bottom" constant="521.33333333333326" id="kN9-iW-rvi"/>
                             <constraint firstItem="ISb-Rt-C5D" firstAttribute="centerX" secondItem="LgW-0o-trY" secondAttribute="centerX" id="lD2-Rw-38S"/>
+                            <constraint firstItem="e8Y-FO-5tl" firstAttribute="centerX" secondItem="qhG-dq-ind" secondAttribute="centerX" id="lSx-D4-b9w"/>
                             <constraint firstItem="ISb-Rt-C5D" firstAttribute="top" secondItem="3Ex-4W-8Bm" secondAttribute="top" constant="10" id="rGW-8n-nMw"/>
+                            <constraint firstItem="qhG-dq-ind" firstAttribute="leading" secondItem="3Ex-4W-8Bm" secondAttribute="leading" constant="104.33333333333337" id="riM-ZP-sU9"/>
                             <constraint firstItem="1xc-Gp-H3w" firstAttribute="top" secondItem="ISb-Rt-C5D" secondAttribute="bottom" constant="23" id="uex-e2-Wq6"/>
+                            <constraint firstItem="e8Y-FO-5tl" firstAttribute="centerX" secondItem="1xc-Gp-H3w" secondAttribute="centerX" id="voN-my-Zbh"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Weather" id="wAU-zf-FnC">
                         <imageReference key="image" image="sun.min.fill" catalog="system" symbolScale="large"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="cityNameLabelMyLocation" destination="SMN-in-rL5" id="e9i-Sl-vOl"/>
+                        <outlet property="climateDescriptionLabelMyLocation" destination="LTm-Di-Gns" id="EQz-zn-ZZj"/>
+                        <outlet property="iconPictureMyLocationImageView" destination="PQw-Xs-JD2" id="8LY-hB-ecG"/>
+                        <outlet property="skyDescriptionLabelMyLocation" destination="swd-ix-Ez3" id="bOj-Uw-KKe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TTy-G0-KNs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
