--- a/LeBaluchon/View/Base.lproj/Main.storyboard
+++ b/LeBaluchon/View/Base.lproj/Main.storyboard
@@ -77,6 +77,41 @@
                                     <action selector="testIfDataWork:" destination="IwW-mx-CPe" eventType="touchUpInside" id="jMs-ZL-3bQ"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2iH-H3-8x3">
+                                <rect key="frame" x="96.999999999999986" y="467.99999999999994" width="220.66666666666663" height="190.33333333333331"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nx3-cW-dMn">
+                                        <rect key="frame" x="0.0" y="0.0" width="220.66666666666666" height="60.666666666666664"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DefaultNameCity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eo-HJ-hnG">
+                                        <rect key="frame" x="0.0" y="70.666666666666629" width="220.66666666666666" height="28.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conditions Météorologique" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9n-Gv-0gG">
+                                        <rect key="frame" x="0.0" y="109.33333333333337" width="220.66666666666666" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CielDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMe-Hc-NTd">
+                                        <rect key="frame" x="0.0" y="139.66666666666663" width="220.66666666666666" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TempsDescription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15y-IX-4pM">
+                                        <rect key="frame" x="0.0" y="170" width="220.66666666666666" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="4eo-HJ-hnG" firstAttribute="top" secondItem="Nx3-cW-dMn" secondAttribute="bottom" constant="9.9999999999999929" id="6Zo-Ur-d7g"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3Ex-4W-8Bm"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -84,7 +119,10 @@
                         <constraints>
                             <constraint firstItem="1xc-Gp-H3w" firstAttribute="centerX" secondItem="LgW-0o-trY" secondAttribute="centerX" id="7Rc-C7-tNH"/>
                             <constraint firstItem="qhG-dq-ind" firstAttribute="top" secondItem="1xc-Gp-H3w" secondAttribute="bottom" constant="7.6666666666667425" id="9bN-7c-UBN"/>
+                            <constraint firstItem="3Ex-4W-8Bm" firstAttribute="trailing" secondItem="2iH-H3-8x3" secondAttribute="trailing" constant="96.329999999999998" id="JOm-KK-IzA"/>
+                            <constraint firstItem="2iH-H3-8x3" firstAttribute="leading" secondItem="3Ex-4W-8Bm" secondAttribute="leading" constant="97" id="PxZ-ZO-XrQ"/>
                             <constraint firstItem="e8Y-FO-5tl" firstAttribute="bottom" secondItem="3Ex-4W-8Bm" secondAttribute="bottom" id="Rlf-Jz-7W8"/>
+                            <constraint firstItem="2iH-H3-8x3" firstAttribute="top" secondItem="qhG-dq-ind" secondAttribute="bottom" constant="93.329999999999998" id="bE8-N8-cR4"/>
                             <constraint firstItem="e8Y-FO-5tl" firstAttribute="leading" secondItem="3Ex-4W-8Bm" secondAttribute="leading" constant="175" id="iZJ-sw-Zvi"/>
                             <constraint firstAttribute="bottom" secondItem="qhG-dq-ind" secondAttribute="bottom" constant="521.33333333333326" id="kN9-iW-rvi"/>
                             <constraint firstItem="ISb-Rt-C5D" firstAttribute="centerX" secondItem="LgW-0o-trY" secondAttribute="centerX" id="lD2-Rw-38S"/>
@@ -93,16 +131,19 @@
                             <constraint firstItem="qhG-dq-ind" firstAttribute="leading" secondItem="3Ex-4W-8Bm" secondAttribute="leading" constant="104.33333333333337" id="riM-ZP-sU9"/>
                             <constraint firstItem="1xc-Gp-H3w" firstAttribute="top" secondItem="ISb-Rt-C5D" secondAttribute="bottom" constant="23" id="uex-e2-Wq6"/>
                             <constraint firstItem="e8Y-FO-5tl" firstAttribute="centerX" secondItem="1xc-Gp-H3w" secondAttribute="centerX" id="voN-my-Zbh"/>
+                            <constraint firstItem="e8Y-FO-5tl" firstAttribute="top" secondItem="2iH-H3-8x3" secondAttribute="bottom" constant="72.670000000000002" id="wLo-U8-CNk"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Weather" id="wAU-zf-FnC">
                         <imageReference key="image" image="sun.min.fill" catalog="system" symbolScale="large"/>
                     </tabBarItem>
                     <connections>
-                        <outlet property="cityNameLabelMyLocation" destination="SMN-in-rL5" id="e9i-Sl-vOl"/>
-                        <outlet property="climateDescriptionLabelMyLocation" destination="LTm-Di-Gns" id="EQz-zn-ZZj"/>
-                        <outlet property="iconPictureMyLocationImageView" destination="PQw-Xs-JD2" id="8LY-hB-ecG"/>
-                        <outlet property="skyDescriptionLabelMyLocation" destination="swd-ix-Ez3" id="bOj-Uw-KKe"/>
+                        <outlet property="laRochelleClimateLabel" destination="LTm-Di-Gns" id="5P1-Vk-7QU"/>
+                        <outlet property="laRochelleNameLabel" destination="SMN-in-rL5" id="Wc6-e6-BB2"/>
+                        <outlet property="laRochelleSkyLabel" destination="swd-ix-Ez3" id="IG0-K6-WLc"/>
+                        <outlet property="newYorkClimateLabel" destination="15y-IX-4pM" id="7l9-x3-gEM"/>
+                        <outlet property="newYorkNameLabel" destination="4eo-HJ-hnG" id="foe-BL-jOU"/>
+                        <outlet property="newYorkSkyLabel" destination="MMe-Hc-NTd" id="R05-l9-Dy1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TTy-G0-KNs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
